Fix floating header width alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,7 @@ a:hover {
 }
 
 .floating-header {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
